test/classes/initializers/generics/phase2-only-type-with-default.good
phase2-only-type-with-default.chpl:7: In initializer:
phase2-only-type-with-default.chpl:9: error: cannot update a type field, "t", in phase 2
